# HarmonyNetTunnelLab

./: .gitignore  README.md  build-profile.json5  oh-package.json5  package.json
.hvigor/dependencyMap/: dependencyMap.json5  oh-package.json5
.hvigor/dependencyMap/entry/: oh-package.json5
.hvigor/report/: report-202606102008373120.json  report-202606102008440850.json  report-202606102012265180.json  report-202606102012354950.json  report-202606102014115250.json  report-202606102014186510.json  report-202606102017497610.json  report-202606102017562140.json  report-202606102025373900.json  report-202606102025445220.json
.qoder/specs/: fix-mobile-data-routing-loop.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docker/mihomo-adapter/: Dockerfile  README.md
entry/: build-profile.json5  oh-package.json5
entry/libs/arm64-v8a/: README.md  libmihomo_adapter.h
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  napi_init.cpp
entry/src/main/cpp/mihomo_adapter/: README.md  mihomo_adapter_api.h  mihomo_adapter_stub.cpp
entry/src/main/cpp/native/: mihomo_adapter.cpp  mihomo_adapter.h  vpn_core.cpp  vpn_core.h
entry/src/main/ets/api/: MihomoApi.ets
entry/src/main/ets/common/: Constants.ets  Utils.ets
tools/: build-mihomo-adapter.sh  build-so.sh  docker-build-mihomo-adapter.sh  install-mihomo-adapter.sh  mock-mihomo-server.js  verify-hap-native-libs.sh  verify-mihomo-adapter.sh
tools/mihomo-adapter-go/: android_log_stub.c  go.mod  main.go
tools/mihomo-adapter-go/android/: log.h
tools/mihomo-adapter-go/fake-include/android/: log.h
(+37 files in other folders)
